--- a/Dashboard/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/Dashboard/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -233,7 +233,7 @@ body > .navbar-collapse{
 
     &[data-image]:after,
     &.has-image:after{
-        opacity: .7;
+        opacity: 1;
     }
 
     &[data-color="black"]:after{
