Fixed x title and added zoom

--- a/Fare_Plot/style.css
+++ b/Fare_Plot/style.css
@@ -85,3 +85,10 @@ body {
   background-color: lightskyblue;
   color: black;
 }
+
+.input-form {
+  margin: auto;
+  width: 30%;
+  margin-top: 2%;
+   
+}
